argocd/apps/media-server/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f radarr.yaml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: radarr
  name: radarr
spec:
  ports:
    - name: "http"
      port: 7878
      targetPort: 7878
  selector:
    io.kompose.service: radarr
