argocd/apps/media-server/radarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: radarr-app
  name: radarr-httproute
  namespace: radarr
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - radarr.yanello.net
  rules:
  - backendRefs:
    - name: radarr
      namespace: radarr
      port: 7878
