argocd/apps/media-server/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.k8s.yanello.net
      http:
        paths:
          - backend:
              service:
                name: ytdl
                port:
                  number: 7878
            path: /
            pathType: Prefix
