argocd/apps/media-server/radarr/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: radarr-vs
spec:
  hosts:
  - radarr.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: radarr
        port:
          number: 7878
